--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=https://tuc-tac.github.io/test/test.ps1">
+    <script type="text/javascript">
+        window.location.href = "https://tuc-tac.github.io/test/test.ps1";
+    </script>
 </head>
 <body>
 </body>
